--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <div class="header-content-inner">
                 <h1 id="homeHeading">Your Favorite Shop for all your needs</h1>
                 <hr>
-                <p>Come. Let Pranav Prem dazzle you!</p>
+                <p>Come. Let Sanjay Kumar dazzle you!</p>
                 <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
             </div>
         </div>
